# public-renewable-grid-resilience-auditor

./: .env.example  .gitignore  Launch-Public-Renewable-Grid-Dashboard.desktop  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-orchestration.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: grid_resilience_pipeline.py
data/: README.md
dbt/: README.md  dbt_project.yml  profiles.yml  profiles.yml.example
dbt/seeds/: schema.yml  zone_conformance_mapping.csv  zone_conformance_mapping_history.csv
dbt/tests/: test_dim_zone_no_unmapped.sql  test_dim_zone_scd2_single_current.sql  test_ember_generation_non_negative.sql  test_entsoe_generation_non_negative.sql  test_fact_zone_hour_alignment.sql  test_intermediate_non_negative_generation.sql  test_intermediate_timezone_hour_alignment.sql  test_intermediate_zone_mapping_conformance.sql  test_mart_composite_range.sql  test_mart_stress_band_thresholds.sql  test_open_meteo_wind_speed_range.sql  test_source_freshness_gate.sql
docs/: README.md  project-defense-and-implementation-playbook.md  system-overview-brief.md  system-run-commands-and-dashboard.md
docs/commands/: bash-shell-commands.md  git-commands.md  make-commands.md
reports/dashboards/: README.md  (+1 more)
scripts/: run_full_system_and_dashboard.sh
src/: README.md  __init__.py
tests/: test_late_arrival.py  test_performance_benchmark.py  test_phase10_dashboard_narrative.py  test_phase11_monitoring.py  test_phase2_scaffold.py  test_phase3_contracts.py  test_phase4_ingestion.py  test_phase9_forecasting.py  test_security_controls.py
(+93 files in other folders)
